Fix list items checkbox alignment

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ ul{
 }
 
 li{
-  list-style-type: circle;
+  list-style-type: none;
 }
 .error{
   padding-bottom: 10px;
